fixed input type number on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -148,6 +148,8 @@ input[type="checkbox"] {
 
 /* para wala yung button sa form na for numbers up and down */
 input[type="number"] {
+  -moz-appearance: textfield;
+
   &::-webkit-inner-spin-button,
   &::-webkit-outer-spin-button {
     -webkit-appearance: none;
